--- a/composer.json
+++ b/composer.json
@@ -41,5 +41,7 @@
             "CasasoftMessenger\\": "src/",
             "CasasoftGeo\\": "src/"
         }
-    }
+    },
+    "prefer-stable": true,
+    "minimum-stability": "dev"
 }
