--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,7 @@
         "zf2"
     ],
     "homepage": "http://casasoft.ch/",
-    "license": "MIT",
+    "license": "GPL",
     "authors": [
         {
             "name": "Jens Stalder",
