--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,8 @@
     "require": {
         "php": ">=5.3.2",
         "zendframework/zend-http": "2.*",
-        "zendframework/zend-json": "2.*"
+        "zendframework/zend-json": "2.*",
+        "zendframework/zend-log": "2.*"
     },
     "require-dev": {
     },
