--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
     ],
     "require": {
         "php": ">=5.3.2",
-        "laminas/laminas-dependency-plugin": "^2.1"
+        "laminas/laminas-dependency-plugin": "2.0.0"
     },
     "require-dev": {},
     "suggest": {},
