--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -17,14 +17,10 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v3
 
-      - name: Psalm
-        uses: docker://vimeo/psalm-github-actions
-        with:
-          security_analysis: true
-          report_file: results.sarif
+      - name: PHP Composer
+        uses: php-actions/composer@v6
 
-      - name: Upload Security Analysis results to GitHub
-        uses: github/codeql-action/upload-sarif@v1
+      - name: PHPStan Static Analysis
+        uses: php-actions/phpstan@v3
         with:
-          sarif_file: results.sarif
-
+          path: src/
