--- a/composer.json
+++ b/composer.json
@@ -14,8 +14,8 @@
         }
     ],
     "require": {
-        "php": ">=5.3.2",
-        "laminas/laminas-dependency-plugin": "2.0.0"
+        "php": "~8.0.0 || ~8.1.0 || ~8.2.0 || ~8.3.0",
+        "laminas/laminas-dependency-plugin": "2.6.0"
     },
     "require-dev": {},
     "suggest": {},
@@ -31,7 +31,10 @@
             "CasasoftGeo\\": "src/"
         }
     },
-    "config": {},
+    "config": {
+        "allow-plugins": {
+            "laminas/laminas-dependency-plugin": true
+        }},
     "extra": {
         "branch-alias": {
             "dev-master": "1.0.x-dev"
